NP-46311-new-ticket-status, implemented